--- a/solitaire-game/package.json
+++ b/solitaire-game/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
